[project]
name = "comfyui-settings-sidebar-button"
description = "ComfyUI extension to add a settings button to the sidebar"
version = "1.0.1"
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/PBandDev/comfyui-settings-sidebar-button"

[tool.comfy]
PublisherId = "pbanddev"
DisplayName = "Settings Sidebar Button"
Icon = "https://raw.githubusercontent.com/PBandDev/comfyui-settings-sidebar-button/main/assets/cog.svg"
requires-comfyui = ">=0.3.0"
includes = ['dist/']

[tool.bumpversion]
current_version = "1.0.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "Release version {new_version}"
message = "chore: bump version to {new_version} [skip ci]"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'
